fixed scroll behavior on overflow (vertical)

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,16 +3,19 @@
 @import menu
 @import fonts
 
+$panel-color: #1A1A1A
+$background-color: #090909
+
 html, body
   margin: 0
   padding: 0
   width: 100%
   height: 100%
   color: white
-  background-color: black
+  background-color: $panel-color
   font-family: $FONT-FAMILY
   font-size: $FONT_SIZE
-  overflow-x: hidden
+  overflow: hidden
 
 *
   user-select: none
@@ -29,25 +32,24 @@ button.error
 body
   display: flex
   flex-direction: row
-  margin: 1px 0 0 0
+  margin: 0
+  padding: 0
+  overflow-y: scroll
 
-  .side
-    flex: 1
-    background-color: #1A1A1A
-
-  .center
-    margin: 0 1px
-    height: 100%
+  > .center
+    margin: 0 auto
     display: flex
+    border: 1px $background-color solid
     flex-direction: column
+    height: max-content
 
     > .top
-      flex: 1 0 40px
+      flex: 0 0 40px
       display: flex
       flex-direction: row
       align-items: center
       justify-content: space-between
-      background-color: #1A1A1A
+      background-color: $panel-color
 
       #meter
         display: flex
@@ -61,7 +63,7 @@ body
     display: flex
     flex-direction: column
     width: 100%
-    height: 100%
+    background-color: $background-color
 
     h5
       margin: 0
@@ -84,7 +86,7 @@ body
       flex: 0 0 auto
       margin: 1px 0 0 0
       padding: 20px 12px 16px 16px
-      background-color: #1A1A1A
+      background-color: $panel-color
 
       > .columns
         display: flex
@@ -94,7 +96,7 @@ body
         > .column
           display: flex
           flex-direction: column
-          background-color: #1A1A1A
+          background-color: $panel-color
           row-gap: 8px
 
     > form.track-nav
@@ -108,7 +110,7 @@ body
       align-items: center
       border: none
       outline: none
-      background-color: #1A1A1A
+      background-color: $panel-color
 
       > span
         opacity: 0.2
@@ -196,7 +198,7 @@ body
         display: flex
         flex-direction: column
         padding: 16px
-        background-color: #1A1A1A
+        background-color: $panel-color
 
         > .structure
           display: flex
@@ -215,10 +217,10 @@ body
           flex: 1 0 0
           margin: 1px 0 0 0
           padding: 16px
-          background-color: #1A1A1A
+          background-color: $panel-color
 
       > .preview
-        margin: 1px 0 0 1px
+        margin: 1px
         padding: 32px
         flex: 1
         display: flex
@@ -226,7 +228,7 @@ body
         position: relative
         background-color: #222
 
-        .rotary
+        > .rotary
           padding: 32px
           position: relative
           background-color: #040404
@@ -275,6 +277,14 @@ body
               &:after
                 opacity: 0.6
                 content: attr(data-unit)
+
+      > .preview-context
+        flex: 1 0 0
+        background-color: $panel-color
+
+  footer
+    flex: 1 0 40px
+    background-color: $panel-color
 
 div.two-columns
   display: grid
